--- a/Courses.html
+++ b/Courses.html
@@ -26,7 +26,7 @@
           <ul>
             <li><a href="index.html">Home</a></li>
             <li><a href="about.html">About</a></li>
-            <li><a href="Courses.html" class="current">Course</a></li>
+            <li><a href="courses.html" class="current">Course</a></li>
             <li><a href="blog.html">Blog</a></li>
             <li><a href="contact.html">Contact</a></li>
           </ul>
