--- a/blog.html
+++ b/blog.html
@@ -26,7 +26,7 @@
           <ul>
             <li><a href="index.html">Home</a></li>
             <li><a href="about.html">About</a></li>
-            <li><a href="courses.html">Course</a></li>
+            <li><a href="course.html">Course</a></li>
             <li><a href="blog.html" class="current">Blog</a></li>
             <li><a href="contact.html">Contact</a></li>
           </ul>
