--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
         </div>
 
         <div class="campus-col">
-          <img src="/assets/img.jpg" alt="" />
+          <img src="/assets/img.jpg" style="height: 70%;" />
           <div class="layer">
             <h3>NEWYORK</h3>
           </div>
