--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
         </div>
 
         <div class="campus-col">
-          <img src="/assets/img.jpg" style="height: 70%;" />
+          <img src="/assets/img.jpg"  />
           <div class="layer">
             <h3>NEWYORK</h3>
           </div>
@@ -131,7 +131,7 @@
           </p>
         </div>
         <div class="facilities-col">
-          <img src="assets/basketballcourt.jpg" alt="" />
+          <img src="assets/basketballcourt.jpg" style="height: 50%;" />
           <h3>Basketball court</h3>
           <p>
             Lorem ipsum dolor, sit amet consectetur adipisicing elit. Deleniti
