--- a/course.html
+++ b/course.html
@@ -90,7 +90,7 @@
           </p>
         </div>
         <div class="facilities-col">
-          <img src="assets/basketballcourt.jpg" alt="" />
+          <img src="assets/basketballcourt.jpg" style="height: 50%;" />
           <h3>Basketball court</h3>
           <p>
             Lorem ipsum dolor, sit amet consectetur adipisicing elit. Deleniti
